# rusty-schema2ts

./: .editorconfig  .prettierrc.js  Cargo.toml  README.md  binding.js  index.d.ts  index.js  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
bench/: index.js  jsonSchema.json
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  util.rs
src/structure/: default_config.rs  mod.rs
test/: schema2ts.test.ts
test/empty/: output.ts
test/test1/: output.ts
test/test2/: input.json  output.ts
test/test3/: input.json  output.ts
test/test4/: output.ts
test/test5/: input.json  output.ts
test/test6/: input.json  output.ts
test/test7/: input.json  output.ts
test/test8/: input.json  output.ts
