[package]
edition = "2021"
name = "puffmeow_rusty-schema2ts"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
indexmap = {version = "2.0.0", features = ["serde"]}
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
mimalloc-rust = {version = "0.2"}
napi = {version = "2.12.2", default-features = false, features = ["napi4"]}
napi-derive = "2.12.2"
regex = "1.9.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0.104"}

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
