[package]
edition = "2021"
name = "puffmeow_rusty-schema2ts"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
indexmap = {version = "2.0.0", features = ["serde"]}

napi = {version = "2.12.2", default-features = false, features = ["napi4"]}
napi-derive = "2.12.2"
regex = "1.9.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0.104"}

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = {version = "0.2"}

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = {version = "0.2", features = ["local-dynamic-tls"]}

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
